--- a/style.css
+++ b/style.css
@@ -38,6 +38,38 @@ body {
   .btn-primary:hover {
     background: #009879;
   }
+
+  .social-buttons {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .social-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 0 10px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    color: white;
+    transition: background-color 0.3s ease;
+  }
+  
+  .github {
+    background-color: #2c3e50;
+  }
+  
+  .github:hover {
+    background-color: #6e7c7e;
+  }
+  
+  .linkedin {
+    background-color: #00a0dc;
+  }
+  
+  .linkedin:hover {
+    background-color: #005f87;
+  }
   
   /* Projects Section */
   .projects {
