--- a/style.css
+++ b/style.css
@@ -124,6 +124,25 @@ body {
   .technologies img:hover {
     transform: scale(1.1);
   }
+
+  .cv {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+  }
+  
+  .cv img {
+    width: 1554px;
+    height: 2239px;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+  }
+  
+  .cv img:hover {
+    transform: scale(0.9);
+  }
   
   .btn-primary {
     background: #007bff;
@@ -146,6 +165,10 @@ body {
     .technologies img {
       width: 30px;
       height: 30px;
+    }
+    .cv img{
+        width: 350px;
+        height: 418px;
     }
   }
   
